# cc-janitor

./: .gitignore  CHANGELOG.md  README.md  README.ru.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  release.yml
docs/: CC_USAGE.md  cookbook.md
docs/plans/: 2026-05-03-cc-janitor-design.md  2026-05-03-cc-janitor-phase1-mvp.md  2026-05-05-cc-janitor-phase2-design.md  2026-05-05-cc-janitor-phase2-mvp.md  2026-05-09-cc-janitor-phase3-design.md  2026-05-09-cc-janitor-phase3-mvp.md  2026-05-11-cc-janitor-phase4-dream-analysis.md  2026-05-11-cc-janitor-phase4-dream-design.md  2026-05-11-cc-janitor-phase4-mvp.md  2026-05-11-cc-janitor-ux-audit.md  2026-05-13-cc-janitor-ux-audit-phase4.md
src/cc_janitor/: __main__.py
src/cc_janitor/cli/: __init__.py  _audit.py
src/cc_janitor/cli/commands/: audit.py  backups.py  completions.py  config.py  context.py  doctor.py  dream.py  hooks.py  install_hooks.py  memory.py  monorepo.py  perms.py  schedule.py  session.py  stats.py  trash.py  undo.py  watch.py
src/cc_janitor/core/: audit.py  bundle.py  config.py  context.py  dream_diff.py  dream_doctor.py  dream_snapshot.py  hooks.py  memory.py  monorepo.py  permissions.py  reinject.py  safety.py  schedule.py  sessions.py  settings_observer.py  sleep_hygiene.py  state.py  stats.py  tokens.py  watcher.py  watcher_main.py
src/cc_janitor/i18n/: __init__.py  en.toml  ru.toml
src/cc_janitor/tui/: _confirm.py  app.py
src/cc_janitor/tui/screens/: _source_filter.py  audit_screen.py  context_screen.py  dream_screen.py  hooks_screen.py  memory_screen.py  perms_screen.py  schedule_screen.py  sessions_screen.py
tests/: conftest.py
tests/data/mock-claude-home/: .claude.json
tests/data/mock-claude-home/.claude/: CLAUDE.md  settings.json  settings.local.json
tests/data/mock-claude-home/.claude/projects/test-proj/: abc123.jsonl  def456.jsonl
tests/data/mock-claude-home/.claude/projects/test-proj/.claude/: settings.json
tests/data/mock-claude-home/.claude/projects/test-proj/memory/: MEMORY.md  feedback_no_emojis.md  project_phase2_notes.md  project_test.md
tests/data/mock-claude-home/Conversations/claude-code/: 2026-04-15_test-summary_def456.md
tests/data/mock-claude-home/myproject/: CLAUDE.md
tests/tui/: test_app_smoke.py  test_audit_screen_stats.py  test_context_screen.py  test_dream_screen.py  test_hooks_screen.py  test_memory_screen.py  test_perms_screen.py  test_schedule_screen.py  test_sessions_screen.py  test_source_filter.py
tests/unit/: test_audit.py  test_audit_integration.py  test_bundle_export.py  test_bundle_import.py  test_cli_audit.py  test_cli_backups.py  test_cli_completions.py  test_cli_config.py  test_cli_context.py  test_cli_doctor.py  test_cli_dream.py  test_cli_hooks.py  test_cli_memory.py  test_cli_monorepo.py  test_cli_perms.py  test_cli_phantoms.py  test_cli_schedule.py  test_cli_session.py  test_cli_skeleton.py  test_cli_stats.py  test_cli_stats_hygiene.py  test_cli_trash.py  test_cli_undo.py  test_cli_watch.py  test_config_loader.py  test_context_claudemd.py  test_context_total.py  test_doctor_watcher.py  test_dream_diff.py  test_dream_doctor.py  test_dream_snapshot.py  test_dream_tar_resolve.py  test_fixture.py  test_hooks_discover.py  test_hooks_logging.py  test_hooks_simulate.py  test_i18n.py  test_install_hooks_platform.py  test_main_utf8.py  test_memory_discover.py  (+25 more)
