[project]
name = "cc-janitor"
version = "0.1.0"
description = "Tidy up your Claude Code environment — sessions, permissions, context, hooks, schedule."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Creatman", email = "creatmanick@gmail.com" }]
keywords = ["claude-code", "tui", "cli", "anthropic", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.80",
    "typer>=0.12",
    "tiktoken>=0.7",
    "python-rapidjson>=1.20",
    "tomlkit>=0.13",
    "platformdirs>=4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-textual-snapshot>=1",
    "pytest-cov>=5",
    "hypothesis>=6",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
cc-janitor = "cc_janitor.__main__:main"

[project.urls]
Homepage = "https://github.com/CreatmanCEO/cc-janitor"
Issues = "https://github.com/CreatmanCEO/cc-janitor/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cc_janitor"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Tests routinely import inside functions (lazy isolation, fixtures) and have
# long literal data strings — relax E402 (imports not at top) and E501 (line length).
"tests/**/*.py" = ["E402", "E501"]
# Typer's idiomatic API uses function calls in argument defaults
# (typer.Option(...), Path.cwd(), etc.). Suppress B008 in the CLI tree.
"src/cc_janitor/cli/**/*.py" = ["B008"]
# Textual's BINDINGS attribute is idiomatically a class-level list.
"src/cc_janitor/tui/**/*.py" = ["RUF012"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
